<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="ST_SoftStop" Id="{2ea45547-6301-4c90-856e-086fde8652e1}">
    <Declaration><![CDATA[TYPE ST_SoftStop :
STRUCT
	bEnable 	: BOOL; // Enable soft stop
	fPosStop 	: LREAL; // Stop in positive direction
	fNegStop 	: LREAL; // Stop in negative direction
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>